--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/aes-js": "^3.1.3",
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "aes-js": "^3.1.2",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
+    "encrypt-rsa": "^2.1.5",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
+    "pbkdf2": "^3.1.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.3",
+    "@types/pbkdf2": "^3.1.1"
   }
 }
